--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+# Built files
+target/
+
 # Package Files #
 *.jar
 *.war
@@ -18,9 +21,6 @@
 *.zip
 *.tar.gz
 *.rar
-
-# built files #
-target/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
