--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,18 @@
       <scope>test</scope>
     </dependency>
 
+    <!--Spark-->
     <dependency>
       <groupId>com.sparkjava</groupId>
       <artifactId>spark-core</artifactId>
       <version>2.8.0</version>
     </dependency>
+    <!--Logger used by Spark-->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.21</version>
+  </dependency>
   </dependencies>
 
   <build>
