--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,20 @@
   </properties>
 
   <dependencies>
+	  <!--  Configuration  -->
+	  <dependency>
+	          <groupId>com.typesafe</groupId>
+	          <artifactId>config</artifactId>
+	          <version>1.3.1</version>
+      </dependency>
+  
+	<!-- MySQL Connector -->
+	<dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>8.0.19</version>
+	</dependency>
+  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
