--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
 
 	<dependencies>
 	
+		<!-- GSON -->
+		<dependency>
+		  <groupId>com.google.code.gson</groupId>
+		  <artifactId>gson</artifactId>
+		  <version>2.8.6</version>
+		</dependency>
+	
 		<!-- JDBI -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -34,11 +41,17 @@
 
 		<!-- JUnit -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
-		</dependency>
+	        <groupId>org.junit.jupiter</groupId>
+	        <artifactId>junit-jupiter-api</artifactId>
+	        <version>5.6.2</version>
+	        <scope>test</scope>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.junit.jupiter</groupId>
+	        <artifactId>junit-jupiter-engine</artifactId>
+	        <version>5.6.2</version>
+	        <scope>test</scope>
+	    </dependency>
 
 		<!--Spark -->
 		<dependency>
